src/global/global.css
:root {
    --black: #26251d;
    --white: #ffffff;
    --lightgray: #fafafa;
    --ivory: #fffff0;
    --gold: #ccc4a2;
    --brown: #4f4f2f;
    --navy: #223a70;
}

body {
    display: grid;
    grid-template-columns: 190px 1fr;
    grid-template-rows: 4rem 1fr;
    width: 1200px;
    min-height: 100vh;
    margin: 0 auto;
    font-family: serif;
    color: var(--brown);
    background-color: var(--lightgray);
}

header.main {
    grid-column: 1 / 3;
    text-align: center;
    align-content: center;
    border-bottom: 1px solid var(--gold);
    font-size: 1.25rem;
    margin: 0 1rem;
}

footer {
    display: flex;
    flex-direction: column;
    grid-column: 2 / 3;
    gap: 0.5rem;
    margin: 2rem;
    padding: 1rem 0 2rem 0;
    border-top: 1px solid var(--gold);
}

a,
a:visited {
    cursor: pointer;
    color: var(--navy);
    text-decoration: underline;
}

h1 {
    font-size: 2rem;
    margin: 0.5rem 0 1.5rem 0;
    padding: 0 1.5rem 0 0;
    border-bottom: 1px solid var(--gold);
    width: fit-content;
}

h1 > small {
    font-size: 0.5em;
    font-weight: 400;
    margin-left: 1em;
}

h2 {
    font-size: 1.5rem;
}

th {
    text-align: left;
    font-weight: 400;
    padding-right: 0.5em;
}

th::after {
    content: ':';
}

@scope (nav.main) {
    :scope {
        display: flex;
        flex-direction: column;
        gap: 2.5rem;
        grid-column: 1 / 2;
        grid-row: 2 / 4;
        margin-top: 1.5rem;
        padding-top: 2.5rem;
        font-size: 1.1em;
        border-right: 1px solid var(--gold);
    }

    ul {
        display: grid;
        justify-content: center;
        gap: 1rem;
        padding: 0.5em 0;
    }

    li::marker {
        content: '';
    }

    section.menu {
        text-align: center;
    }

    @scope (section) {
        :scope {
            margin: 0 1em;
        }

        header {
            text-align: center;
            border-bottom: 1px solid var(--gold);
            padding-bottom: 0.5em;
        }
    }

    @scope (section.updates) {
        li {
            font-size: 0.9em;
            display: -webkit-box;
            line-clamp: 2;
            -webkit-line-clamp: 2;
            -webkit-box-orient: vertical;
            overflow: hidden;
        }

        li > span {
            margin-right: 0.25em;
        }
    }
}

@scope (main) {
    :scope {
        grid-column: 2 / 3;
        padding: 1rem 2rem;
    }

    ul {
        padding-left: 1rem;
    }

    ul:has(ul) {
        display: grid;
        gap: 1rem;
    }
}

@media screen and (max-width: 1279px) {
    body {
        width: 100%;
    }

    @scope (section.updates) {
        li {
            line-clamp: 3;
            -webkit-line-clamp: 3;
        }
    }
}

